tests/paczka1/fuzzy1/81293746.err
Error in line 8: 1Td2pigMFB A583 52,0
Error in line 12: 1Td2pigMFB S913 118,47
Error in line 10: 1Td2pigMFB S913 69,8
Error in line 5: EChl7w S913 75,8
Error in line 15: EChl7w A399 16,0
Error in line 25: S913 A583 99,6
Error in line 24: 7K6 A583 23,7
Error in line 27: S913 S913 62,7
